# NSU-opd-dmta-solver

./: .gitignore  .readthedocs.yml  README.md  about.html  build.sh  index.html  jest.config.js  main.css  manifest.json  mkdocs-requirements.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  stateMachine.html  turingMachine.html
.github/workflows/: main.yml
cypress/integration/: simple_fsm.js
docs/: index.md  tutorial.md
docs/_css/: style.css
src/: api.js  canvas.js  elements.js  input.js  myscript.js  renderer.js  simulate.js  turingmachine.js
src/lib/: graph.js
styles/: indexPageStyling  main.css  tablesContent.css
tests/: api.test.js  canvasManager.test.js  common.js  elements.test.js  geometry.test.js  graph.test.js
