[tool.poetry]
name = "dmta-solver"
version = "1.0.7"
description = "oh oj"
authors = ["clonexy700"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Clonexy700/NSU-opd-dmta-solver"
repository = "https://github.com/Clonexy700/NSU-opd-dmta-solver"
keywords = [
  "education",
  "it"]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]

# Docs
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]